# go-wasm-bench

./: .gitignore  README.md  bench.sh  build.sh
calc/: fib.go  matrix.go  nqueens.go  prime.go  quicksort.go
rust-calc/: Cargo.toml  bench.sh
rust-calc/benches/: fib.rs  matrix.rs  nqueens.rs  prime.rs  quicksort.rs
